Avance de CRUD de clínica

--- a/Lab4_20220270/src/main/resources/templates/fragments/navbar.html
+++ b/Lab4_20220270/src/main/resources/templates/fragments/navbar.html
@@ -10,7 +10,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" th:href="@{/clinicas/list}">Clinicas</a>
+                            <a class="nav-link active" th:href="@{/clinica/list}">Clinicas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" th:href="@{/doctor/list}">Doctores</a>
